--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,33 @@
-<!DOCTYPE html>
+<!-- views/index.ejs -->
+<!doctype html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+
+<head>
+  <title> Title</title>
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+  <style>
+    body {
+      padding-top: 80px;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+
+    <div class="jumbotron text-center">
+      <h1> Homepage</h1>
+
+      <p>Login or Register with:</p>
+
+      <a href="/login" class="btn btn-default">
+        <span class="fa fa-user"></span> Login</a>
+      <a href="/signup" class="btn btn-default">
+        <span class="fa fa-user"></span> Signup</a>
+    </div>
+
+  </div>
+</body>
+
 </html>
