--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,19 +1,5 @@
-<!-- views/signup.ejs -->
-<!doctype html>
-<html>
+<% include ./partials/head %>
 
-<head>
-  <title> Title</title>
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-  <link rel='stylesheet' href='/stylesheets/style.css' />
-  <style>
-    body {
-      padding-top: 80px;
-    }
-  </style>
-</head>
-
-<body>
   <div class="container">
 
     <div class="col-sm-6 col-sm-offset-3">
@@ -52,6 +38,4 @@
     </div>
 
   </div>
-</body>
-
-</html>
+  <% include ./partials/footer %>
