--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,50 +1,30 @@
-<!-- views/dashboard.ejs -->
-<!doctype html>
-<html>
+<% include ./partials/head %>
 
-<head>
-  <title> Title</title>
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-  <link rel='stylesheet' href='/stylesheets/style.css' />
-  <style>
-    body {
-      padding-top: 80px;
-    }
-  </style>
-</head>
+<div class="container">
 
-<body>
-  <div class="container">
-
-    <div class="page-header text-center">
-      <h1> User Dashboard</h1>
-      <a href="/logout" class="btn btn-default btn-sm">Logout</a>
-    </div>
-
-    <div class="row">
-
-      <!-- LOCAL INFORMATION -->
-      <div class="col-sm-6">
-        <div class="well">
-          <h3>Username </h3>
-
-          <p>
-            <strong>id</strong>:
-            <%= user._id %>
-              <br>
-              <strong>email</strong>:
-              <%= user.local.email %>
-                <br>
-                <strong>password</strong>:
-                <%= user.local.password %>
-          </p>
-
-        </div>
+      <div class="page-header text-center">
+        <h1> User Dashboard</h1>
+        <a href="/user/logout" class="btn btn-default btn-sm">Logout</a>
       </div>
 
-    </div>
+      <div class="row">
 
-  </div>
-</body>
+        <!-- LOCAL INFORMATION -->
+        <div class="col-sm-12">
+          <div class="well">
+            <h3>Username </h3>
 
-</html>
+            <p>
+              <% var userObject = JSON.stringify(user, 0, 3); %>
+              <pre>
+                <%= userObject %>
+              </pre>
+            </p>
+
+          </div>
+        </div>
+
+      </div>
+
+</div>
+<% include ./partials/footer %>
