--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,5 @@
 <!-- views/index.ejs -->
-<!doctype html>
-<html>
-
-<head>
-  <title> Title</title>
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-  <link rel='stylesheet' href='/stylesheets/style.css' />
-  <style>
-    body {
-      padding-top: 80px;
-    }
-  </style>
-</head>
-
-<body>
+<% include ./partials/head %>
   <div class="container">
 
     <div class="jumbotron text-center">
@@ -21,13 +7,11 @@
 
       <p>Login or Register with:</p>
 
-      <a href="/login" class="btn btn-default">
+      <a href="/user/login" class="btn btn-default">
         <span class="fa fa-user"></span> Login</a>
-      <a href="/signup" class="btn btn-default">
+      <a href="/user/signup" class="btn btn-default">
         <span class="fa fa-user"></span> Signup</a>
     </div>
 
   </div>
-</body>
-
-</html>
+<% include ./partials/footer %>
