--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,20 +1,5 @@
-<!-- Show our login form -->
-<!-- views/login.ejs -->
-<!doctype html>
-<html>
+<% include ./partials/head %>
 
-<head>
-  <title> Title</title>
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-  <link rel='stylesheet' href='/stylesheets/style.css' />
-  <style>
-    body {
-      padding-top: 80px;
-    }
-  </style>
-</head>
-
-<body>
   <div class="container">
 
     <div class="col-sm-6 col-sm-offset-3">
@@ -29,7 +14,7 @@
         <% } %>
 
           <!-- LOGIN FORM -->
-          <form action="/login" method="post">
+          <form action="/user/login" method="post">
             <div class="form-group">
               <label>Email</label>
               <input type="text" class="form-control" name="email">
@@ -45,7 +30,7 @@
           <hr>
 
           <p>Need an account?
-            <a href="/signup">Signup</a>
+            <a href="/user/signup">Signup</a>
           </p>
           <p>Or go
             <a href="/">home</a>.</p>
@@ -53,6 +38,4 @@
     </div>
 
   </div>
-</body>
-
-</html>
+  <% include ./partials/footer %>
