testing posts resource

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,6 +4,7 @@
   <title> Title</title>
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
   <link rel='stylesheet' href='/css/style.css' />
+  <meta name="_csrf" content="<%= _csrf %>">
   <style>
     body {
       padding-top: 80px;
