--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,5 +13,26 @@
         <span class="fa fa-user"></span> Signup</a>
     </div>
 
+    <div class="row">
+      <div class="col-sm-12">
+          <div class="well">
+              <h3>Create a post</h3>
+            
+              <form action="/" class="post-creator-form">
+                  
+                <input type="hidden" name="_csrf", value="<%= _csrf %>">
+                <div class="form-group">
+                  <input type="text" class="form-control" id="post-title" placeholder="Post Title" name="name">
+                </div>
+                <div class="form-group">
+                  <button type="submit" class="btn btn-primary mt-4">Create post</button>
+                </div>
+              
+              </form>
+  
+            </div>
+      </div>
+    </div>
+
   </div>
 <% include ./partials/footer %>
