--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,5 @@
 <script src="/js/jquery-3.2.1.min.js" ></script>
+<script src="/js/jquery.loadTemplate-1.4.4.min.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="/js/main.js" ></script>
 </body>
