--- a/views/login.ejs
+++ b/views/login.ejs
@@ -34,6 +34,7 @@
           <p>Need an account?
             <a href="/user/signup">Signup</a>
           </p>
+          <a href="/user/forgot">Forgot password?</a>
           <p>Or go
             <a href="/">home</a>.</p>
 
